<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaIntents"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/startCameraInPhoto"
        android:layout_width="170dp"
        android:layout_height="58dp"
        style="@style/btn_style"

        android:text="@string/startCameraInPhoto"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/startCameraAndGetImage"
        android:layout_width="170dp"
        android:layout_height="58dp"
        style="@style/btn_style"
        android:layout_margin="15dp"
        android:text="@string/startCameraAndGetImage"

        />

    <Button
        android:id="@+id/openUrl"
        android:layout_width="170dp"
        android:layout_height="58dp"
        style="@style/btn_style"
        android:layout_margin="15dp"
        android:text="@string/openUrl" />

    <Button
        android:id="@+id/smsMessage"
        android:layout_width="170dp"
        android:layout_height="58dp"
        style="@style/btn_style"
        android:layout_margin="15dp"
        android:text="@string/smsMessage" />

    <ImageView
        android:id="@+id/imageViewN"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:layout_margin="20dp"
        tools:srcCompat="@tools:sample/avatars" />


</LinearLayout>